chore: move redis to quarkus sync client