@@ -19,11 +19,9 @@ dependencies {
     implementation 'io.quarkus:quarkus-scala'
     implementation 'io.quarkus:quarkus-flyway'
     implementation 'io.quarkus:quarkus-flyway-deployment'
-    implementation 'io.vertx:vertx-redis-client'
+    implementation 'io.quarkus:quarkus-redis-client'
 
     implementation('org.flywaydb:flyway-core:7.3.1')
-    // { exclude module: 'net.milkbowl:vault:1.2.27' }
-
 
     implementation 'io.quarkus:quarkus-resteasy-jsonb'
     implementation 'io.quarkus:quarkus-resteasy-mutiny'
@@ -54,11 +52,6 @@ repositories {
 }
 
 group 'com.example.jcc.quarkus'
-
-
-compileJava {
-    options.compilerArgs.addAll(["--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED"])
-}
 
 /**
  * Remove migration SQLs from being packaged in resulting jar
